add_subdirectory(wpa_supplicant)
add_subdirectory(wifi6_lwip_adapter)
add_subdirectory(macsw_os_adapter)

sdk_add_compile_definitions(-D__FILENAME__=__FILE__)
sdk_add_compile_definitions_ifdef(CONFIG_CSIDMA_CLI -DCFG_CSIDMA_CLI=1)
sdk_add_compile_definitions_ifdef(CONFIG_IPV6 -DCFG_IPV6)
sdk_add_compile_definitions_ifdef(CONFIG_WFA -DCFG_WFA=1)
